crates/service/tests/references/snapshots/features__references__memory_def_ident_idx.snap
---
source: crates/service/tests/references/mod.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 12
      },
      "end": {
        "line": 2,
        "character": 19
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 23
      },
      "end": {
        "line": 3,
        "character": 30
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 18
      },
      "end": {
        "line": 4,
        "character": 25
      }
    }
  }
]
